# Savify

./: .gitignore  Final report 26-12-24.docx  Final_Synthetic_Negotiation_Dataset.csv  HammerDetect.py  LATUPDATED REPORT.docx  XGBOOST_TRAINING (1).ipynb  _requirements.txt  detector.py  finalize report 5-8-25.docx  index.html  model_performance_analysis.docx  package-lock.json  package.json  results(1).csv  training_history.csv  updated report (1).docx  updated report -2.docx  xgb_discount_model.json
Savify Report/: Report V2.docx  buyer.vsdx  in process.vsdx  report V1.docx  submitted.pptx
backend/ai-model/: predict.py
backend/backend/: pyproject.toml
backend/backend/backend/: main.py
examples/: tutorial.ipynb
server/: .env  package-lock.json  package.json  server.js
server/ai-discount/: controller.js  predict.py  router.js
server/ai-faq/: faq_chatbot.py  faq_embeddings.pkl  query.py
server/models/: Order.js  Product.js  Products.js  Seller.js  User.js  Voucher.js
server/routes/: adminRoutes.js  authRoutes.js  chatbotRoutes.js  createAdmin.js  orderRoutes.js  productRoutes.js  voucher.js
src/: App.css  App.jsx  index.js  style.css
src/components/: AccountSetting.jsx  AddProduct.css  AddProduct.jsx  AddProductModal.css  AddProductModal.jsx  AdminDashboard.css  AdminDashboard.jsx  AdminTable.css  Auth.css  Cart.css  Cart.jsx  Categories.jsx  CategoryPage.css  CategoryPage.jsx  ChatBot.css  ChatBot.jsx  Checkout.css  Checkout.jsx  CreatedBy.css  CreatedBy.jsx  Dashboard.css  Dashboard.jsx  DashboardContent.jsx  EditProductModal.jsx  EditProfile.css  (+50 more)
(+17 files in other folders)
