[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["muzii-06 <ma.muzammilarif@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-multipart = "^0.0.18"
pillow = "^11.0.0"
ultralytics = "^8.3.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
